Fix typo in style.css

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -5,7 +5,7 @@ color: #000000;
 
 .red-line {
 background-color: #ff8f8f;
-font-family: Arial; sans-serif;
+font-family: Arial, sans-serif;
 }
 
 .big-boy {
