--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,41 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
 
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  padding:8px;
+  margin:8px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px 8px;
 }
 
 .button-container {
+  margin:8px;
   background: #e3f4ff;
+  display:flex; 
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding:8px;
 }
 
 button {
+  display:block;
   background: white;
+  padding: 8px 20px;
   border: 1px solid #eee;
+ 
 }
