Fix problem in ex 2 boxes

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -25,9 +25,6 @@ body {
 .button-container {
   margin:8px;
   background: #e3f4ff;
-  display:flex; 
-  align-items: center;
-  justify-content: center;
   text-align: center;
   padding:8px;
 }
@@ -37,5 +34,6 @@ button {
   background: white;
   padding: 8px 20px;
   border: 1px solid #eee;
+  margin: 0 auto;
  
 }
