--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -13,8 +13,11 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display:flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  padding: 8px;
+
 }
 
 .profile-image {
@@ -46,7 +49,16 @@ margin: 0;
 }
 
 .right {
+display: flex;
+flex-direction: row;
+justify-content: flex-end;
+}
+
+.links {
 display:flex;
+flex-direction: row;
+gap: 8px;
+
 }
 
 a {
