--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -13,10 +13,8 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display:flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-between;
-  padding: 8px;
+  padding:8px;
 
 }
 
@@ -43,23 +41,12 @@ button {
   padding: 8px 24px;
 }
 
-.left {
-display:flex;
-margin: 0;
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
-.right {
-display: flex;
-flex-direction: row;
-justify-content: flex-end;
-}
-
-.links {
-display:flex;
-flex-direction: row;
-gap: 8px;
-
-}
 
 a {
   /* this removes the line under our links */
@@ -69,5 +56,9 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
 }
 
