--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,8 +10,23 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  align-self:center;
+  justify-self: center;
+  margin-bottom: 30px;
 }
 
+.planter {
+display:flex; 
+justify-items: center; 
+}
+
+.plant {
+
+}
+
+.text {
+  text-align: center; 
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
