--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,23 +10,29 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  align-self:center;
   justify-self: center;
+  align-self: center;
   margin-bottom: 30px;
 }
 
 .planter {
 display:flex; 
-justify-items: center; 
+justify-self: center;
+justify-items: center;
+align-self: center;
+gap:40px;
 }
 
 .plant {
-
+text-align: center; 
 }
 
 .text {
-  text-align: center; 
+  max-width: 200px;
+  
+
 }
+
 /* do not edit this footer */
 .footer {
   position: fixed;
