--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display:flex;
 }
 
 .icon {
@@ -33,8 +34,27 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 0 0 auto;
+  margin: 16px;
 }
 
+.stuff {
+  display:flex;
+  flex-direction: column;  
+}
+
+.header {
+  display:flex;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: 18px;
+  margin:18px 12px 12px 0px;
+}
+
+.button-zone {
+  margin-top:16px;
+  margin-bottom: 16px;  
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
