--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,10 +5,48 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  min-height:100%;
+
+}
+
+.all {
+  display:flex;
+  flex-flow: column;
+  min-height:100%;
+}
+.header {
+display:flex;
+justify-content: space-between;
+}
+
+
+.content {
+  flex: 1;
+}
+
+.footer {
+  display:flex;
+  justify-content: space-between;
+  background-color: lightgrey;
+  justify-self: end;
+}
+
+.left-links,
+.right-links {
+  display:flex;
+  gap:12px;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 img {
   width: 600px;
+  display:flex;
+  justify-self:center;
 }
 
 button {
@@ -16,6 +54,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 6px;
+  margin: 8px;
 }
 
 input {
@@ -23,4 +63,16 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+  display:flex;
+  justify-self: center;
 }
+
+ul {
+list-style-type: none;
+}
+
+a {
+text-decoration: none;
+color:grey;
+}
+
