--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,24 +5,47 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
-  min-height:100%;
-
-}
-
-.all {
   display:flex;
-  flex-flow: column;
-  min-height:100%;
+  flex-direction: column;
+
 }
-.header,
-.footer {
-display:flex;
-justify-content: space-between;
+
+img {
+  width: 600px;
+}
+
+button {
+  font-family: Roboto, sans-serif;
+  border: none;
+  border-radius: 8px;
+  background: #eee;
+  padding: 8px 16px;
+}
+
+input {
+  border: 1px solid #ddd;
+  border-radius: 16px;
+  padding: 8px 24px;
+  width: 400px;
 }
 
 .content {
   flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 16px;
 }
+
+.header,
+.footer {
+display:flex;
+justify-content: space-between;
+padding: 16px;
+}
+
+
 
 .footer {
   background-color: lightgrey;
@@ -35,38 +58,15 @@ justify-content: space-between;
   gap:12px;
 }
 
-.buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
-img {
-  width: 600px;
-  display:flex;
-  justify-self:center;
-}
 
-button {
-  font-family: Roboto, sans-serif;
-  border: none;
-  border-radius: 8px;
-  background: #eee;
-  padding: 6px;
-  margin: 8px;
-}
-
-input {
-  border: 1px solid #ddd;
-  border-radius: 16px;
-  padding: 8px 24px;
-  width: 400px;
-  display:flex;
-  justify-self: center;
-}
 
 ul {
-list-style-type: none;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px
 }
 
 a {
